반응형 2번째 수정

--- a/surfit.html
+++ b/surfit.html
@@ -11,13 +11,13 @@
                 font-family: LL Circular,Apple SD Gothic Neo,sans-serif;
             }
         </style>
-        <link rel="stylesheet" href="surfit2css/head-menu/head-menu.css">
-        <link rel="stylesheet" href="surfit2css/head-menu/head-right.css">
-        <link rel="stylesheet" href="surfit2css/head-menu/head-left.css">
-        <link rel="stylesheet" href="surfit2css/main/main.css">
-        <link rel="stylesheet" href="surfit2css/left-menu/left-menu.css">
-        <link rel="stylesheet" href="surfit2css/content/all-directory.css">
-        <link rel="stylesheet" href="surfit2css/content/item.css">
+        <link rel="stylesheet" href="CSS/head-menu/head-menu.css">
+        <link rel="stylesheet" href="CSS/head-menu/head-right.css">
+        <link rel="stylesheet" href="CSS/head-menu/head-left.css">
+        <link rel="stylesheet" href="CSS/main/main.css">
+        <link rel="stylesheet" href="CSS/left-menu/left-menu.css">
+        <link rel="stylesheet" href="CSS/content/all-directory.css">
+        <link rel="stylesheet" href="CSS/content/item.css">
     </head>
     <body>
         <div style="position: fixed; width:100%; z-index: 2;">
@@ -176,6 +176,10 @@
                     </div>
                 </div>    
             </div>
+        </div>
+        <div class="blue-button">
+            <div class="plus">+</div>
+            <div class="enrollment">디렉토리 등록하기</div>
         </div>
 
 
